# opti-query

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
local_tests/: create_db.py
src/opti_query/: cli.py
src/opti_query/cli_utils/: __init__.py  cli_runner.py  struct.py
src/opti_query/optipy/: definitions.py  exceptions.py  hanlder.py
src/opti_query/optipy/llm_clients/: __init__.py  base.py  chatgpt.py  gemini.py
src/opti_query/optipy/queries/: __init__.py  neo4j.py
src/opti_query/optipy/utils/: neo4j.py
src/optipy/: __init__.py  definitions.py  hanlder.py
src/optipy/llm_clients/: gemini.py
src/optipy/queries/: neo4j.py
src/optipy/utils/: neo4j.py
unittests/: test_core.py
